# Tracktivity

./: .gitignore  README.md  fix_trigger.sql  package-lock.json  package.json  rulebook.json  supabase_setup.sql
backend/: .gitignore  pyproject.toml  rulebook.sql  test_batch.py  test_conn.py  test_profiles_insert.py  test_signup_2.py
backend/app/: main.py
backend/app/db/: supabase_client.py
backend/app/internal/: config.py  dependencies.py  session.py
backend/app/routers/: auth.py  batch.py  faculty.py
backend/app/routes/: auth.py  batch.py  faculty.py  reports.py  rulebook.py  student.py
backend/app/schemas/: auth.py  batch.py  facultyverification.py
backend/app/util/: helper.py
backend/edgecases/: dual_insert
backend/plsql/: dual_insert
backend/sqlfiles/: fix_trigger.sql  fix_update_trigger.sql  rulebook.sql  schema.sql
backend/tests/: test_admin.py  test_anon.py  test_profiles.py  test_signup.py
frontend/: package-lock.json  package.json  test_signup.js
frontend/src/: middleware.js  proxy.js
frontend/src/app/: globals.css  layout.js  not-found.js  page.js
frontend/src/app/dashboard/: page.js
frontend/src/components/: ActivityGroupCard.js  BatchCodeBadge.js  BatchNavCard.js  CalendarPicker.js  CertificateForm.js  DashboardHeader.js  FeatureCard.js  JoinBatch.js  LayoutWrapper.js  Navbar.js  PageLoader.js  RoleBadge.js  StatusBadge.js  SubmissionDetailSkeleton.js  SubmissionDetailView.js  SubmissionList.js  ThemeToggle.js
frontend/src/hooks/: useRequireRole.js  useRulebook.js
frontend/src/utils/: api.js  helpers.js  server-api.js
(+65 files in other folders)
